--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Заголовок</title>
   </head>
   <body>
-    <h1>Мой первый1111 заголовок</h1>
+    <h1>Привет Мир!</h1>
     <p>Мой первый абзац</p>
     
      <script src="script.js"></script>
